...
    <string name="category">Kategoria</string>
    <string name="menuitem_detail_menu">Menu</string>
    <string name="menuitem_recipes_search">Szukaj</string>
    <string name="memnutitem_icon">Ikona</string>


    <string name="menu_item_add_recipe">Dodaj przepis</string>
    <string name="menu_item_add_category">Dodaj kategorię</string>
    <string name="menu_item_add_photo">Dodaj zdjęcie</string>
    <string name="menu_item_add_ingredient">Dodaj składnik</string>
    <string name="menu_item_remove_recipe">Usuń przepis</string>
    <string name="menu_item_remove_category">Usuń kategorię</string>
    <string name="menu_item_remove_photo">Usuń zdjęcie</string>
    <string name="menu_item_remove_ingredient">Usuń składnik</string>
    <string name="menu_item_share">Udostępnij</string>
    <string name="menu_item_edit">Edytuj</string>
    <string name="menu_item_save">Zapisz</string>

    <string name="category_name">Nazwa kategorii</string>

    <string name="recipe_title">Tytuł</string>
    <string name="recipe_detail_description">Sposób przygotowania</string>
    <string name="recipe_detail_ingredients">Składniki</string>
...
