...

    <!--Title of recipe-->

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title_TextInputLayout">

          <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title_editText"
            android:hint="@string/recipe_title"
            android:imeOptions="actionNext"
            android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>


...
