<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@drawable/ok20"
        android:id="@+id/action_save"
        android:title="@string/menu_item_save"
        app:showAsAction="ifRoom">

    </item>

</menu>
