<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/recipe_photo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/category_filled50"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        />

    <TextView
        android:id="@+id/add_edit_category_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nowa kategoria"
        android:textSize="25dp"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/recipe_photo"
        android:layout_alignBottom="@+id/recipe_photo"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/categories_icon_spinner"
        android:layout_below="@+id/add_edit_category_title">
    </Spinner>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/categories_icon_spinner"
        android:layout_marginTop="10dp"
        android:id="@+id/category_name_TextInputLayout">

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/category_name_editText"
            android:hint="@string/category_name"
            android:imeOptions="actionNext"
            android:inputType="textMultiLine"/>
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/category_name_TextInputLayout"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/category_name_TextInputLayout"
        android:layout_toLeftOf="@id/create_button"
        android:layout_marginRight="30dp"

        />

</RelativeLayout>
