<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/list_view_item"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        />


</RelativeLayout>